--- a/src/styles.css
+++ b/src/styles.css
@@ -1,25 +1,39 @@
-/* You can add global styles to this file, and also import other style files */
+/* global css*/
+html{
+  font-size: 12px;
+}
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
 
-.card{
+.container {
+  flex: 1;
+}
+
+.lead{
+  font-size: 1.2em;
+}
+
+
+footer {
+  height: 60px;
+}
+
+/* index.html css*/
+.index_card{
   border:none;
 }
-.card-text{
-  min-height: 6em;
+.index_text{
+  min-height: 8em;
 }
-.card-deck{
-  margin-bottom:10em;
-}
-.btn_card{
+
+.index_btn_card{
   width:10em;
 }
+
 .calendar{
   height: 50px;
   width:50px;
 }
-footer {
-  position: absolute;
-  width: 100%;
-  height: 60px;
-  background-color: #f5f5f5;
-}
-
