--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,6 @@
-<app-navbar></app-navbar>
-
-<app-jumbotron></app-jumbotron>
-
-<div class="container my-5">
-  <div class="card-deck pt-5">
-  <app-eventcard class="col col-md-6 col-lg-4"></app-eventcard>
-  <app-eventcard class="col col-md-6 col-lg-4"></app-eventcard>
-  <app-eventcard class="col col-md-6 col-lg-4"></app-eventcard>
-</div>
+<div class="content-container">
+  <app-navbar></app-navbar>
+  <app-jumbotron></app-jumbotron>
+  <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
