ticket selection and routing - váza

--- a/src/app/ticket/ticket.component.html
+++ b/src/app/ticket/ticket.component.html
@@ -1,6 +1,6 @@
 
-<div class="container">
-<p>
-  ticket works!
-</p>
-</div>
+
+<button routerLink="./new">Create new</button>
+<button routerLink="./4/bid">Bid page</button>
+
+<router-outlet></router-outlet>
