--- a/src/app/event/event-detail/event-detail.component.html
+++ b/src/app/event/event-detail/event-detail.component.html
@@ -33,7 +33,7 @@
     </div>
     <div class="text-center mb-3">
       <input class="btn btn-primary btn-lg" type="submit"
-             routerLink="../../list"
+             routerLink="../list"
              value="létrehozás">
     </div>
   </div>
