user service bekötés és minimal userkezelés

--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -17,15 +17,24 @@
       <div class="card border-secondary mt-3 mb-4">
         <div class="card-header">Bejelentkezés</div>
         <div class="card-body">
-          <form id="loginForm" novalidate>
             <div class="form-group">
               <label for="loginEmail">Email</label>
-              <input title="hibás email cím" name="loginEmail" type="email" class="form-control" id="loginEmail" placeholder="email">
+              <input title="hibás email cím" name="loginEmail" type="email"
+                     class="form-control" id="loginEmail"
+                     value="angular"
+                     placeholder="email"
+                     #email>
+
               <small id="emailHelp" class="form-text text-muted">a címed nálunk biztonságban lesz</small>
             </div>
             <div class="form-group">
               <label for="loginPassword">Jelszó</label>
-              <input name="loginPassword" type="password" class="form-control" id="loginPassword" placeholder="jelszó">
+              <input name="loginPassword" type="password"
+                     class="form-control" id="loginPassword"
+                     value="angular"
+                     placeholder="jelszó"
+                     #password>
+
             </div>
             <div class="form-check">
               <label class="form-check-label">
@@ -33,8 +42,10 @@
                 emlékezz rám
               </label>
             </div>
-            <button type="submit" class="btn btn-primary" routerLink="/user">belépés</button>
-          </form>
+            <button class="btn btn-primary"
+                    (click)="login(email.value, password.value)">
+              belépés
+            </button>
         </div>
       </div>
 
