ngifelse es ng-template használat, navbar rendberakásához

--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -15,12 +15,13 @@
         <a class="nav-item nav-link" routerLinkActive="active" routerLink="/event/list">Események</a>
         <a class="nav-item nav-link" routerLinkActive="active" routerLink="/ticket/list">Jegyek</a>
         <a class="nav-item nav-link" routerLinkActive="active" routerLink="/about">Rólunk</a>
-<ng-container *ngIf="!userService.isLoggedin">
+<ng-container *ngIf="!userService.isLoggedin; else loggedinBlock">
   <a class="nav-item nav-link" routerLinkActive="active" routerLink="/user/login">Belépés</a>
   <a class="nav-item nav-link btn btn-primary text-light ml-lg-2 btn-sm" routerLinkActive="active" routerLink="/user/registration">Regisztráció</a>
 </ng-container>
-
+        <ng-template #loggedinBlock>
         <a class="nav-item nav-link" routerLinkActive="active" (click)="logout()">Logout</a>
+        </ng-template>
       </div>
     </div>
   </div>
