--- a/src/app/ticket/ticket-list/ticket-list.component.html
+++ b/src/app/ticket/ticket-list/ticket-list.component.html
@@ -38,35 +38,15 @@
     </thead>
 
     <tbody>
-    <tr>
-      <td scope="row" data-toggle="tooltip" data-placement="bottom" title="Még 3 napig lehet licitálni, az esemény megtekintéséhez kattints ide">
-        <a routerLink="/event/list">Sziget fesztivál</a>
+    <tr *ngFor="let ticket of tickets">
+      <td scope="row">
+        <a [routerLink]="['/event',ticket.eventId]">{{ticket.event.name}}</a>
       </td>
-      <td>2018.08.03. 13:00</td>
-      <td>Példa Jóska</td>
-      <td>3db</td>
-      <td><a [routerLink]="['../', 4, 'bid']">Tovább a licithez</a></td>
+      <td>{{ticket.date}}</td>
+      <td class="d-none d-md-table-cell">{{ ticket.seller.name }}</td>
+      <td class="d-none d-md-table-cell">{{ ticket.numberOfTickets }}</td>
+      <td><a [routerLink]="['/ticket', ticket.id, 'bid']">Tovább a licithez</a></td>
     </tr>
-
-
-
     </tbody>
   </table>
-
-  <nav>
-    <ul class="pagination mt-5">
-      <li class="page-item disabled">
-        <a class="page-link" href="#" tabindex="-1">Előző</a>
-      </li>
-      <li class="page-item"><a class="page-link" href="#">1</a></li>
-      <li class="page-item active">
-        <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="page-item"><a class="page-link" href="#">3</a></li>
-      <li class="page-item">
-        <a class="page-link" href="#">Következő</a>
-      </li>
-    </ul>
-  </nav>
-
 </div>
