guard bekötve = frissítés esetén nem maradunk belépve + ilyenkor a home-ra irányít

--- a/src/app/ticket/ticket-list/ticket-list.component.html
+++ b/src/app/ticket/ticket-list/ticket-list.component.html
@@ -31,8 +31,8 @@
     <tr>
       <th class="text-center">Esemény neve</th>
       <th class="text-center">Időpont</th>
-      <th class="text-center">Előadó neve</th>
-      <th class="text-center">Hány db?</th>
+      <th class="text-center d-none d-md-table-cell">Előadó neve</th>
+      <th class="text-center d-none d-md-table-cell">Hány db?</th>
       <th class="text-center">Licitek megtekintése</th>
     </tr>
     </thead>
