--- a/src/app/event/event-detail/event-detail.component.html
+++ b/src/app/event/event-detail/event-detail.component.html
@@ -16,14 +16,13 @@
 
     <div class="form-group">
       <label for="idopont">Esemény időpontja</label>
-      <input type="date" class="form-control mb-3" id="idopont" placeholder="Esemény időpontja">
+      <input type="text" class="form-control mb-3" id="idopont" placeholder="Esemény időpontja">
     </div>
 
-    <div class="form-group row">
-      <img class="img-fluid mx-auto" src="../assets/newevent.png" alt="">
-      <div class="form-group mx-auto mt-3">
-        <label for="kep">Válassz képet az eseményhez</label>
-        <input type="file" class="form-control-file" id="kep">
+    <div class="form-group">
+      <div class="form-group mt-3">
+        <label for="pictureUrl">Válassz képet az eseményhez</label>
+        <input type="text" class="form-control mb-3" id="pictureUrl" placeholder="Eseményhez tartozó kép URL-je">
       </div>
     </div>
 
