--- a/src/app/event/event-detail/event-detail.component.html
+++ b/src/app/event/event-detail/event-detail.component.html
@@ -3,38 +3,48 @@
 
   <div class="card-header">
     <div class="bg-light text-center">
-      <h3>Új esemény létrehozása</h3>
+      <h3 *ngIf="!event.id; else modify">Új esemény létrehozása</h3>
+      <ng-template #modify><h3>Esemény szerkesztése</h3></ng-template>
     </div>
   </div>
   <!--card-body-->
   <div class="card-body">
-
+    <form #eventForm="ngForm" (ngSubmit)="onSubmit(eventForm.value)">
     <div class="form-group">
       <label for="esemeny">Esemény címe:</label>
-      <input type="text" class="form-control mb-3" id="esemeny" placeholder="Esemény címe">
+      <input type="text" class="form-control mb-3" id="esemeny" placeholder="Esemény címe"
+             [(ngModel)]="event.name" name="name" required
+      >
     </div>
 
     <div class="form-group">
       <label for="idopont">Esemény időpontja</label>
-      <input type="text" class="form-control mb-3" id="idopont" placeholder="Esemény időpontja">
+      <input type="text" class="form-control mb-3" id="idopont" placeholder="Esemény időpontja"
+             [(ngModel)]="event.date" name="date">
+
     </div>
+
 
     <div class="form-group">
       <div class="form-group mt-3">
         <label for="pictureUrl">Válassz képet az eseményhez</label>
-        <input type="text" class="form-control mb-3" id="pictureUrl" placeholder="Eseményhez tartozó kép URL-je">
+        <input type="text" class="form-control mb-3" id="pictureUrl" placeholder="Eseményhez tartozó kép URL-je"
+               [(ngModel)]="event.pictureURL" name="picUrl">
       </div>
     </div>
 
     <div class="form-group">
       <label for="leiras">Esemény leírása</label>
-      <textarea class="form-control" placeholder="Esemény leírása" id="leiras"></textarea>
+      <textarea class="form-control" placeholder="Esemény leírása" id="leiras"
+                [(ngModel)]="event.description" name="description">
+      </textarea>
     </div>
     <div class="text-center mb-3">
-      <input class="btn btn-primary btn-lg" type="submit"
-             routerLink="../list"
-             value="létrehozás">
+      <button class="btn btn-primary btn-lg" type="submit"
+              [disabled] ="eventForm.invalid"
+             value="létrehozás">Save</button>
     </div>
+    </form>
   </div>
 </div>
 
