* routing atrendezes * mockolt auto login * auth guard vissza visz elozo oldalra es nem fix helyre * levettuk a hozzado es szerkeszto gombokat ha nem vagyunk bejelentkezve * mock adatok attagolasa * ticket detail bekotese

--- a/src/app/ticket/ticket-list/ticket-list.component.html
+++ b/src/app/ticket/ticket-list/ticket-list.component.html
@@ -12,12 +12,12 @@
       </form>
     </div>
 
-    <div class="my-2 my-lg-0 text-center">
+    <div class="my-2 my-lg-0 text-center" *ngIf="_userService.isLoggedin">
       <div>
         <label>Jegyet szeretnék létrehozni</label>
       </div>
       <div class="w-100"></div>
-      <div><a routerLink="../new" class="btn btn-primary" role="button">Új jegy léterhozása</a></div>
+      <div><a routerLink="./new" class="btn btn-primary" role="button">Új jegy léterhozása</a></div>
     </div>
 
   </div>
