--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -12,14 +12,15 @@
     <div class="collapse navbar-collapse" [collapse]="isCollapsed">
       <div class="navbar-nav ml-auto">
         <a class="nav-item nav-link" routerLinkActive="active" routerLink="/home">Home</a>
-        <a class="nav-item nav-link" routerLinkActive="active" routerLink="/event/list">Események</a>
-        <a class="nav-item nav-link" routerLinkActive="active" routerLink="/ticket/list">Jegyek</a>
+        <a class="nav-item nav-link" routerLinkActive="active" routerLink="/event">Események</a>
+        <a class="nav-item nav-link" routerLinkActive="active" routerLink="/ticket">Jegyek</a>
         <a class="nav-item nav-link" routerLinkActive="active" routerLink="/about">Rólunk</a>
 <ng-container *ngIf="!userService.isLoggedin; else loggedinBlock">
   <a class="nav-item nav-link" routerLinkActive="active" routerLink="/user/login">Belépés</a>
   <a class="nav-item nav-link btn btn-primary text-light ml-lg-2 btn-sm" routerLinkActive="active" routerLink="/user/registration">Regisztráció</a>
 </ng-container>
         <ng-template #loggedinBlock>
+          <a class="nav-item nav-link tn btn-primary text-light ml-lg-2 btn-sm" routerLinkActive="active" routerLink="/user">Profile</a>
         <a class="nav-item nav-link" routerLinkActive="active" (click)="logout()">Logout</a>
         </ng-template>
       </div>
