* ticket detail form validation és user feedback ** css ha jo az ertek ** alert ha nem beleklikk utan nem valtozott az ertek * event list sitebuild fix (multiple card-deck) * event és ticket service type cast ** mivel formbol jon az adat ezert stringben erkezik ** viszont mivel === a vizsgalat ezert nem talalja meg * ticket service create-nel csatoljuk be usert es event-et is * ticket-list routerlink fix

--- a/src/app/ticket/bid/bid.component.html
+++ b/src/app/ticket/bid/bid.component.html
@@ -40,7 +40,7 @@
         </table>
 
         <div class="">
-          <a routerLink="../../list"class="btn btn-primary text-light ml-lg-2">Licit a lépcső szerint</a>
+          <a routerLink="./" class="btn btn-primary text-light ml-lg-2">Licit a lépcső szerint</a>
         </div>
 
 
