--- a/src/app/ticket/ticket-detail/ticket-detail.component.html
+++ b/src/app/ticket/ticket-detail/ticket-detail.component.html
@@ -5,7 +5,7 @@
 
     <div class="card-header">
       <div class="bg-light text-center">
-        <h3>Új jegy</h3>
+        <h3>Új jegylicit inditasa</h3>
       </div>
     </div>
 
@@ -13,32 +13,32 @@
 
       <!--card-body-->
       <form #ticketForm="ngForm" (ngSubmit)="onSubmit()">
+
+
       <div class="form-group">
         <label for="select">Esemény választása</label>
         <select class="form-control" id="select"
-        [(ngModel)]="ticket.eventId"
-        name = "eventId"
-        required
-        >
+                [(ngModel)]="ticket.eventId" name = "eventId" #event="ngModel" required>
           <option selected hidden disabled value="0">Válassz egy eseményt!</option>
           <option *ngFor="let ev of events" [value]="ev.id">{{ev.name}}</option>
         </select>
+        <alert type="danger" *ngIf="event.touched && event.pristine">Kötelező mező!</alert>
       </div>
+
 
       <div class="form-group">
         <label for="idopont">Időpont</label>
         <input type="date" class="form-control mb-3" id="idopont" placeholder="időpont"
-               [(ngModel)]="ticket.date"
-               name = "date"
-        >
+               [(ngModel)]="ticket.date" name = "date" required #date="ngModel">
+         <alert type="danger" *ngIf="date.touched && date.pristine">Kötelező mező!</alert>
       </div>
+
 
       <div class="form-group">
         <label for="darab">Darabszám</label>
         <input type="number" class="form-control mb-3" id="darab" placeholder="darabszám"
-               [(ngModel)]="ticket.numberOfTickets"
-               name = "numberOfTickets"
-        >
+               [(ngModel)]="ticket.numberOfTickets" name = "numberOfTickets" #numberOfTickets="ngModel">
+        <alert type="danger" *ngIf="numberOfTickets.touched && numberOfTickets.pristine">Kötelező mező!</alert>
       </div>
 
       <h4 class="my-3">Licit beállítások</h4>
@@ -46,18 +46,21 @@
         <div class="form-group">
           <label for="minlicit">Minimum licit érték</label>
           <input type="number" class="form-control mb-3" id="minlicit" placeholder="Minimum licit érték"
-                 [(ngModel)]="ticket.minimalBidPrice" name="minimalBidPrice"
-          >
+                 [(ngModel)]="ticket.minimalBidPrice" name="minimalBidPrice" #minimalBidPrice="ngModel">
+          <alert type="danger" *ngIf="minimalBidPrice.touched && minimalBidPrice.pristine">Kötelező mező!</alert>
         </div>
 
         <div class="form-group">
           <label for="lepcso">Licit lépcső érték</label>
           <input type="text" class="form-control mb-3" id="lepcso" placeholder="Licit lépcső érték"
-                 [(ngModel)]="ticket.bidStep" name="bidStep">
+                 [(ngModel)]="ticket.bidStep" name="bidStep" #bidStep="ngModel">
+          <alert type="danger" *ngIf="bidStep.touched && bidStep.pristine">Kötelező mező!</alert>
         </div>
 
         <div class="text-center mb-3">
-            <button class="btn btn-primary btn-lg" type="submit" value="Licit indítása">Licit indítása</button>
+            <button class="btn btn-primary btn-lg" type="submit"
+                    [disabled]="event.pristine || date.pristine || numberOfTickets.pristine || minimalBidPrice.pristine || bidStep.pristine">
+              Licit indítása</button>
             <button class="btn btn-secondary btn-lg" type="button" routerLink="../">Mégsem</button>
         </div>
       </form>
