--- a/src/app/ticket/ticket-list/ticket-list.component.html
+++ b/src/app/ticket/ticket-list/ticket-list.component.html
@@ -46,6 +46,7 @@
       <td class="d-none d-md-table-cell">{{ ticket.seller.name }}</td>
       <td class="d-none d-md-table-cell">{{ ticket.numberOfTickets }}</td>
       <td><a [routerLink]="['/ticket', ticket.id, 'bid']">Tovább a licithez</a></td>
+      <!--<td><a [routerLink]="['/ticket', ticket.id]">Tovább a licithez</a></td>-->
     </tr>
     </tbody>
   </table>
