--- a/src/app/event/event-detail/event-detail.component.html
+++ b/src/app/event/event-detail/event-detail.component.html
@@ -7,21 +7,25 @@
       <ng-template #modify><h3>Esemény szerkesztése</h3></ng-template>
     </div>
   </div>
-  <!--card-body-->
+
+
   <div class="card-body">
-    <form #eventForm="ngForm" (ngSubmit)="onSubmit(eventForm.value)">
+
+    <form #eventForm="ngForm" (ngSubmit)="onSubmit()">
+
     <div class="form-group">
       <label for="esemeny">Esemény címe:</label>
       <input type="text" class="form-control mb-3" id="esemeny" placeholder="Esemény címe"
-             [(ngModel)]="event.name" name="name" required
-      >
+             [(ngModel)]="event.name" name="event.name" required [disabled]="!editForm" #name="ngModel">
+      <alert type="danger" *ngIf="name.touched && name.invalid">Kötelező mező!</alert>
     </div>
+
 
     <div class="form-group">
       <label for="idopont">Esemény időpontja</label>
       <input type="text" class="form-control mb-3" id="idopont" placeholder="Esemény időpontja"
-             [(ngModel)]="event.date" name="date">
-
+             [(ngModel)]="event.date" name="date" required [disabled]="!editForm" #date="ngModel">
+      <alert type="danger" *ngIf="date.touched && date.invalid">Kötelező mező!</alert>
     </div>
 
 
@@ -29,20 +33,29 @@
       <div class="form-group mt-3">
         <label for="pictureUrl">Válassz képet az eseményhez</label>
         <input type="text" class="form-control mb-3" id="pictureUrl" placeholder="Eseményhez tartozó kép URL-je"
-               [(ngModel)]="event.pictureURL" name="picUrl">
+               [(ngModel)]="event.pictureURL" name="picUrl" required [disabled]="!editForm" #picUrl="ngModel">
+        <alert type="danger" *ngIf="picUrl.touched && picUrl.invalid">Kötelező mező!</alert>
       </div>
     </div>
 
+
     <div class="form-group">
       <label for="leiras">Esemény leírása</label>
-      <textarea class="form-control" placeholder="Esemény leírása" id="leiras"
-                [(ngModel)]="event.description" name="description">
+      <textarea class="form-control" placeholder="Esemény leírása" id="leiras" required
+                [(ngModel)]="event.description" name="description" [disabled]="!editForm" #description="ngModel">
       </textarea>
+      <alert type="danger" *ngIf="description.touched && description.invalid">Kötelező mező!</alert>
     </div>
+
+
     <div class="text-center mb-3">
-      <button class="btn btn-primary btn-lg" type="submit"
-              [disabled] ="eventForm.invalid"
-             value="létrehozás">Save</button>
+      <button *ngIf="editForm" class="btn btn-primary btn-lg" type="submit"
+              [disabled] ="eventForm.invalid" value="létrehozás">Mentes</button>
+      <button type="button" class="btn btn-primary btn-lg" *ngIf="!editForm && userService.isLoggedin"
+              (click)="editForm = true">Szerkesztes</button>
+      <button type="button" class="btn btn-primary btn-lg" *ngIf="!userService.isLoggedin"
+              (click)="navigateBack()">Vissza
+    </button>
     </div>
     </form>
   </div>
