--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <p class="lead">Használd a Jegybazárt és csereberélj jegyeket a legjobb bulikra. Elfogyott? Az orrod elől vitték el az utolsót? Ne aggódj, irány a JegyBazár!</p>
     <p class="lead" id="btn">
       <a class="btn btn-primary btn-lg mt-4 mb-0"
-         routerLink="../event/list"
+         routerLink="../event"
          role="button">Nézzük az eseményeket!</a>
     </p>
 </app-jumbotron>
@@ -19,7 +19,7 @@
         <div class="card-body">
           <h4 class="card-title text-center">Események</h4>
           <p class="index_text card-text">Itt találod a legtöbb jó bulit, böngéssz bátran és keress vagy adj el jegyeket a barátaidnak, vagy más felhasználóknak.</p>
-          <a href="#" class="btn btn-primary index_btn_card">Események</a>
+          <a routerLink="/event" class="btn btn-primary index_btn_card">Események</a>
         </div>
       </div>
     </div>
@@ -32,7 +32,7 @@
         <div class="card-body">
           <h4 class="card-title text-center">Jegyek</h4>
           <p class="index_text card-text">Ha sietsz, egyből kezdheted a jegyek böngészésével is. Itt is tudsz keresni az esemény neve vagy időpontja alapján.</p>
-          <a href="#" class="btn btn-primary index_btn_card">Jegyek</a>
+          <a routerLink="/ticket" class="btn btn-primary index_btn_card">Jegyek</a>
         </div>
       </div>
     </div>
@@ -45,7 +45,7 @@
         <div class="card-body">
           <h4 class="card-title">Regisztráció</h4>
           <p class="index_text card-text">Még nem regisztráltál? Akkor gyorsan tedd meg, mert a szolgáltatás csak tagonkak elérhető. Sőt, az újak értékes ajándékot kapnak tőlünk.</p>
-          <a href="regisztracio.html" class="btn btn-primary index_btn_card">Regisztráció</a>
+          <a routerLink="/user/registration" class="btn btn-primary index_btn_card">Regisztráció</a>
         </div>
       </div>
     </div>
