--- a/src/app/event/event-list/event-list.component.html
+++ b/src/app/event/event-list/event-list.component.html
@@ -8,53 +8,44 @@
     </form>
   </div>
 
-  <div class="my-2 my-lg-0 text-center" *ngIf="_userService.isLoggedin">
+  <div class="my-2 my-lg-0 text-center" *ngIf="userService.isLoggedin">
     <div>
       <label>Eseményt szeretnék létrehozni</label>
     </div>
     <div class="w-100"></div>
-    <div><a routerLink="./new" class="btn btn-primary" role="button">Új esemény léterhozása</a></div>
+    <div><a routerLink="./new" class="btn btn-primary" role="button">Új esemény
+      léterhozása</a></div>
   </div>
 
 </div>
 
 
 <div class="card-deck pt-5 pb-5" *ngFor="let evg of eventsGrouppedBy3$ | async">
-<app-eventcard class="col col-md-6 col-lg-4"
-*ngFor="let ev of evg"
-[esemeny] = "ev"
-></app-eventcard>
-</div>
-
-
-
-
+  <app-eventcard class="col col-md-6 col-lg-4"
+                 *ngFor="let ev of evg"
+                 [esemeny]="ev"
+  >
+  </app-eventcard>
+</div>˚
 
 <!--<div class="card-deck pt-5 pb-5" *ngFor="let evg of eventsGrouppedBy3">-->
 <!--<app-eventcard class="col col-md-6 col-lg-4"-->
-               <!--*ngFor="let ev of evg"-->
-               <!--[esemeny] = "ev"-->
-<!--&gt;</app-eventcard>-->
+<!--*ngFor="let ev of evg"-->
+<!--[esemeny]="ev"-->
+<!--&gt;-->
+<!--</app-eventcard>-->
 <!--</div>-->
 
-
-
-
-
-  <!--<app-eventcard class="col col-md-6 col-lg-4"-->
-                 <!--*ngFor="let ev of events$ | async"-->
-                  <!--[esemeny] = "ev"-->
-  <!--&gt;</app-eventcard>-->
-
-
-<!--<pre>-->
-<!--{{events$ | async | json}}   &lt;!&ndash; //pipe&ndash;&gt;-->
-<!--</pre>-->
+<!--<app-eventcard class="col col-md-6 col-lg-4"-->
+<!--*ngFor="let ev of events$ | async"-->
+<!--[esemeny]="ev"-->
+<!--&gt;-->
+<!--</app-eventcard>-->
 
 
 <!--<div class="card-deck pt-5 pb-5" *ngFor="let evg of eventsGrouppedBy3">-->
 <!--<app-eventcard class="col col-md-6 col-lg-4"-->
 <!--*ngFor="let ev of evg"-->
-<!--[esemeny] = "ev"-->
+<!--[esemeny]="ev"-->
 <!--&gt;</app-eventcard>-->
 <!--</div>-->
